components/home/information

--- a/locales/pl.json
+++ b/locales/pl.json
@@ -1,5 +1,8 @@
 {
   "home": {
+    "information_section": {
+
+    },
     "footer": {
       "routes-names": {
         "home_page": "strona główna",
