--- a/locales/pl.json
+++ b/locales/pl.json
@@ -10,4 +10,34 @@
       }
     }
   },
+  "profiles-search": {
+
+  },
+  "photos": {
+
+  },
+  "cities": {
+
+  },
+  "project": {
+
+  },
+  "founder": {
+
+  },
+  "changelog": {
+
+  },
+  "agreements": {
+
+  },
+  "contact": {
+
+  },
+  "business": {
+
+  },
+  "example-profile": {
+
+  }
 }
