--- a/locales/en.json
+++ b/locales/en.json
@@ -178,19 +178,19 @@
 
   },
   "footer": {
-    "description": "",
-    "routes_names": {
-      "home_page": "home",
-      "search_page": "search",
-      "photos_page": "photos",
-      "cities_page": "cities",
-      "projects_page": "about project",
-      "founder_page": "founder",
-      "changelog_page": "changelog",
-      "agreements_page": "agreements",
-      "contact_page": "contact",
-      "business_page": "for business",
-      "example_profile": "example profile"
-    }
+    "description": ""
+  },
+  "routes_names": {
+    "home_page": "Home",
+    "search_page": "Search",
+    "photos_page": "Photos",
+    "cities_page": "Cities",
+    "projects_page": "About project",
+    "founder_page": "Founder",
+    "changelog_page": "Changelog",
+    "agreements_page": "Agreements",
+    "contact_page": "Contact",
+    "business_page": "For business",
+    "example_profile": "Example profile"
   }
 }
