--- a/locales/pl.json
+++ b/locales/pl.json
@@ -147,6 +147,11 @@
       "title_section": "Filtry",
       "search": "Szukaj w wynikach"
     },
+    "tags": {
+      "title": "Tagi",
+      "button": "Więcej tagów",
+      "close": "Zamknij"
+    },
     "results_list": {
       "address": "Adres",
       "rating": "Ocena",
