implemented pages/_lang/photos/_id.vue

--- a/locales/en.json
+++ b/locales/en.json
@@ -175,8 +175,13 @@
   },
   "photos": {
     "head": {
-      "title": "Yourcity - Photos"
-    }
+      "title": "Yourcity - Photos",
+      "photo": "Photo"
+    },
+    "information": "Information",
+    "share": "Share",
+    "tags": "Tags",
+    "gallery": "Gallery"
   },
   "cities": {
     "head": {
