--- a/locales/en.json
+++ b/locales/en.json
@@ -239,5 +239,6 @@
     "business_page": "For business",
     "example_profile": "Example profile"
   },
-  "network-connection-error-alert": "Network connection error"
+  "network-connection-error-alert": "Network connection error",
+  "empty-results-alert": "No results for this query"
 }
