updated footer description language

--- a/locales/en.json
+++ b/locales/en.json
@@ -253,7 +253,7 @@
     }
   },
   "footer": {
-    "description": ""
+    "description": "A place where you can find useful information about various places, from restaurants to shops. Thanks to various categories, you can discover interesting objects in your area or in a place that is unknown to you. YOURCITY will help you in searching for a pharmacy but also tourist attractions. Service and location profiles provide various information."
   },
   "routes_names": {
     "home_page": "Home",
