--- a/locales/pl.json
+++ b/locales/pl.json
@@ -253,7 +253,7 @@
     }
   },
   "footer": {
-    "description": ""
+    "description": "Miejsce w którym znajdziesz przydatne informacje o różnych miejscach, od restauracji po sklepy. Dzięki różnym kategoriom możesz odkrywać ciekawe obiekty w Twojej okolicy lub w miejscu, które jest Ci nieznane. YOURCITY wspomoże Cię w poszukiwaniu apteki ale i również atrakcji turystycznych. Profile usług oraz miejsc dostarczają różne informacje."
   },
   "routes_names": {
     "home_page": "Strona główna",
