implemented cities page

--- a/locales/en.json
+++ b/locales/en.json
@@ -215,7 +215,8 @@
   "cities": {
     "head": {
       "title": "Yourcity - Cities"
-    }
+    },
+    "select_city": "Select city"
   },
   "project": {
     "head": {
