updated en.json, pl.json

--- a/locales/en.json
+++ b/locales/en.json
@@ -216,7 +216,7 @@
     "head": {
       "title": "Yourcity - Cities"
     },
-    "select_city": "Select city"
+    "select_city": "Select country"
   },
   "project": {
     "head": {
