--- a/locales/pl.json
+++ b/locales/pl.json
@@ -216,7 +216,7 @@
     "head": {
       "title": "Yourcity - Miasta"
     },
-    "select_city": "Wybierz miasto"
+    "select_city": "Wybierz kraj"
   },
   "project": {
     "head": {
