--- a/locales/pl.json
+++ b/locales/pl.json
@@ -251,6 +251,41 @@
   "example-profile": {
     "head": {
       "title": "Yourcity - Przykładowy profil"
+    },
+    "information": {
+      "page-subtitle": "Yourcity - Przykładowy profil - Informacje",
+      "profile-title": "Example profile on YOURCITY platform",
+      "basic-information": "Informacje podstawowe",
+      "category": "Kategoria",
+      "description": "Opis",
+      "address": "Adres",
+      "country": "Kraj",
+      "city": "Miasto",
+      "street": "Ulica",
+      "postal-code": "Kod pocztowy",
+      "opening-hours": "Godziny otwarcia",
+      "contact": "Kontakt",
+      "phone": "Telefon",
+      "website": "Strona",
+      "e-mail": "E-mail",
+      "tags": "Tagi",
+      "location": "Lokalizacja",
+      "other-media": "Inne media",
+      "apps": "Aplikacje",
+      "creation-date": "Data utworzenia",
+      "last-update": "Ostatnia aktualizacja"
+    },
+    "posts": {
+      "page-subtitle": "Yourcity - Przykładowy profil - Posty"
+    },
+    "gallery": {
+      "page-subtitle": "Yourcity - Przykładowy profil - Galeria"
+    },
+    "comments": {
+      "page-subtitle": "Yourcity - Przykładowy profil - Komentarze"
+    },
+    "related-profiles": {
+      "page-subtitle": "Yourcity - Przykładowy profil - Powiązane profile"
     }
   },
   "footer": {
