implemented about project page

--- a/locales/pl.json
+++ b/locales/pl.json
@@ -303,7 +303,7 @@
     "search_page": "Wyszukiwanie",
     "photos_page": "Zdjęcia",
     "cities_page": "Miasta",
-    "projects_page": "O platformie",
+    "projects_page": "O projekcie",
     "founder_page": "O twórcy",
     "changelog_page": "Changelog",
     "agreements_page": "Regulamin",
