--- a/locales/en.json
+++ b/locales/en.json
@@ -236,7 +236,45 @@
   "agreements": {
     "head": {
       "title": "Yourcity - Agreements"
-    }
+    },
+    "title": "Agreements",
+    "app": "Application - A concept understood as a website available at https://yourcity.io.",
+    "user": "User - a person using the application.",
+    "rules": [
+      {
+        "message": "Użytkownik korzystający z aplikacji Yourcity akceptuje regulamin i postanowienia oraz zapoznał się ze wszystkimi zasadami zawartymi w regulaminie."
+      },
+      {
+        "message": "Użytkownik zobiwiązuje się do korzystania z aplikacji w sposób nie zaburzający jej działania oraz integralności, oraz nie naraża aplikacji na celowe obciążenie."
+      },
+      {
+        "message": "Twórca aplikacji Yourcity nie bierze na siebie odpowiedzialności w związku z niepoprawnym działaniem strony lub nieaktualnymi lub nieprawidłowymi informacjami jakie są wyświetlane podczas wyszukiwania profili."
+      },
+      {
+        "message": "Aplikacja Yourcity jest w ciągłej rozbudowie i może czasami działać niestabilnie lub w ogóle nie być dostępna dla użytkowników podczas aktualizacji."
+      },
+      {
+        "message": "Źródłem danych dla aplikacji Yourcity jest <a href=\"https://developers.facebook.com/docs/places/web\" target=\"_blank\">Places Graph API - Facebook<a>."
+      },
+      {
+        "message": "Aplikacja wykorzystuje pliki cookie jedynie w celach statystycznych."
+      },
+      {
+        "message": "Aplikacja Yourcity może zostać w każdej chwili wyłączona przez osobę nią zarządzającą i przestać świadczyć usługi o charakterze informacyjnym."
+      },
+      {
+        "message": "Należy pamiętać, że informacje o profilach mogą być nieaktualne lub nieprawdziwe na co twórca nie ma wpływu."
+      },
+      {
+        "message": "Wszystkie zdjęcia na stronie głównej, stronie z galerią zdjęć oraz stronie z listą wszystkich karajów są własnością twórcy. Zabrania się kopiowania i nieuprawnionego wykorzystywania bez zgody autora."
+      },
+      {
+        "message": "Twórca dokłada wszelkich starań by aplikacja działała stabilnie oraz jak najlepiej."
+      },
+      {
+        "message": "W przypadku zaobserowania niestabilnej pracy aplikacji lub znalezienia błędów użytkonik proszony jest o kontakt z twórcą i opisanie problemu."
+      }
+    ]
   },
   "contact": {
     "head": {
