--- a/locales/pl.json
+++ b/locales/pl.json
@@ -205,7 +205,8 @@
   "photos": {
     "head": {
       "title": "Yourcity - Zdjęcia",
-      "photo": "Zdjęcie"
+      "photo": "Zdjęcie",
+      "description": "Zobacz galerię zdjęć z różnych miejsc, lokalizacji, miast i krajów."
     },
     "information": "Informacje",
     "share": "Udostępnij",
